# ftlgsupertagger

./: README.md  dataHandle.py  input.txt  main.py  model.py  pyproject.toml  tlgbank.txt  train.py  utils.py
